Finish display featured products, fix detail products pages, fix overflow products ttitles on client

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,7 @@
 /* PRODUCT-ITEM */
 .product-item {
     border: 1px solid #ddd;
-    border-radius: 8px;
+    /* border-radius: 8px; */
     overflow: hidden;
 }
 
@@ -61,6 +61,7 @@
     width: 100%;
     aspect-ratio: 4/3;
     border-bottom: 1px solid #ddd;
+    position: relative;
 }
 
 .product-item .inner-image img {
@@ -69,6 +70,19 @@
     object-fit: cover;
 }
 
+.product-item .inner-image .inner-featured {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: violet;
+    color: white;
+    padding: 3px 6px;
+    font-weight: 600;
+    font-size: 14px;
+    /* border-radius: 8px; */
+}
+
+
 .product-item .inner-content {
     padding: 15px;
 }
@@ -76,6 +90,9 @@
 .product-item .inner-content .inner-title {
     font-size: 20px;
     font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .product-item .inner-content .inner-price-new {
@@ -98,7 +115,7 @@
     background: red;
     display: inline-block;
     padding: 3px 10px;
-    border-radius: 8px;
+    /* border-radius: 8px; */
 }
 
 /* END PRODUCT-ITEM */
